--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@types/express": "^5.0.0",
 		"@types/jest": "^29.5.14",
 		"@types/node-fetch": "^2.6.12",
+		"@types/string-similarity": "^4.0.2",
 		"@types/supertest": "^6.0.2",
 		"jest": "^29.7.0"
 	},
@@ -48,6 +49,7 @@
 		"mongodb": "^6.13.1",
 		"mongoose": "^8.10.2",
 		"node-fetch": "^2.7.0",
+		"string-similarity": "^4.0.4",
 		"supertest": "^7.0.0",
 		"ts-jest": "^29.2.6",
 		"ts-node": "^10.9.2"
